k8s/bookinfo-manifest/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
  labels:
    app: bookinfo-dev-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-ratings
  template:
    metadata:
      labels:
        app: bookinfo-dev-ratings
    spec:
      containers:
      - image: peachwaravich/bookinfo:dev
        name: bookinfo-dev-ratings
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
      imagePullSecrets:
      - name: registry-bookinfo
