k8s/bookinfo-manifest/ratings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
spec:
  rules:
  - host: peach-bookinfo.workshop.opsta.in.th
    http:
      paths:
      - path: /ratings(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bookinfo-dev-ratings
            port:
              number: 8080
